Tests/pass/classNames.php
<?php

// Class names should use CamelCase with no separation between words.

class Version { const A = 5; }
class DatabaseConnection { const B = 6; }
class UserThemeHandler extends ActionHandler { const C = 7; }

?>