Tests/fail/classNames.php
<?php

// Class names should use CamelCase with no separation between words.

class version { const A = 5; }
class Database_connection { const B = 6; }
class User_ThemeHandler extends ActionHandler { const C = 7; }

?>